# candystore

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
simulator/: Cargo.toml
simulator/src/: main.rs
src/: lib.rs  lists.rs  shard.rs  store.rs  typed.rs
tests/: a  test_lists.rs  test_logic.rs
